
* Speedup for Element.makeelement(): the new element now reuses the original
  libxml2 document instead of creating a new empty one

* Speedup for reversed() iteration over element children (Py2.4+ only)

* ElementTree compatible QName class

* RelaxNG and XMLSchema now accept any Element, not only ElementTrees

Bugs fixed
----------

* document('') now works in all XSLT documents

* Crash in XMLSchema and RelaxNG when passing non-schema documents

* Memory leak in RelaxNG() when RelaxNGParseError is raised

0.9.1 (2006-03-30)
==================

Features added
--------------

* lxml.sax.ElementTreeContentHandler checks closing elements and raises
  SaxError on mismatch

* lxml.sax.ElementTreeContentHandler now supports namespace-less SAX events
  (startElement, endElement) and defaults to empty attributes (keyword
  argument)

* Speedup for repeatedly accessing element tag names

* Minor API performance improvements

Bugs fixed
----------

* Memory deallocation bug when using XSLT output method "html"

* sax.py was handling UTF-8 encoded tag names where it shouldn't

* lxml.tests package will no longer be installed (is still in source tar)

0.9 (2006-03-20)
================

Features added
--------------

* Error logging API for libxml2 error messages

* Various performance improvements

* Benchmark script for lxml, ElementTree and cElementTree

* Support for registering extension functions through new FunctionNamespace
  class (see doc/extensions.txt)

* ETXPath class for XPath expressions in ElementTree notation ('//{ns}tag')

* Support for variables in XPath expressions (also in XPath class)

* XPath class for compiled XPath expressions

* XMLID module level function (ElementTree compatible)

* XMLParser API for customized libxml2 parser configuration

* Support for custom Element classes through new Namespace API (see
  doc/namespace_extensions.txt)

* Common exception base class LxmlError for module exceptions
